--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,54 +2,61 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="androidex.example.com.seoulbammmproj">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
-        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
         <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Intro1"
-            android:label="@string/intro1"></activity>
-        <activity android:name=".Intro2"
-            android:label="@string/intro2"></activity>
+        <activity
+            android:name=".Intro1"
+            android:label="@string/intro1" />
+        <activity
+            android:name=".Intro2"
+            android:label="@string/intro2" />
         <activity
             android:name=".Constellation"
-            android:label="Constellation" >
-        </activity>
+            android:label="Constellation" />
         <activity
             android:name=".ConstellationMenu"
-            android:label="ConstellationMenu" >
-        </activity>
+            android:label="ConstellationMenu" />
         <activity android:name=".RecommendationBoard">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <data android:scheme="@string/kakao_scheme"
-                    android:host="@string/kakaolink_host"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="@string/kakaolink_host"
+                    android:scheme="@string/kakao_scheme" />
             </intent-filter>
         </activity>
         <activity
             android:name=".RecommendationMenu"
-            android:label="RecommendationMenu" >
-        </activity>
+            android:label="RecommendationMenu" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key"/>
+            android:value="@string/kakao_app_key" />
 
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".CommuHomeActivity" />
+        <activity android:name=".PostWritingActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
     </application>
 
 </manifest>
