--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,18 @@
         <activity android:name=".CommuHomeActivity" />
         <activity android:name=".PostWritingActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".PostViewActivity"/>
+        <activity android:name=".PostViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="@string/kakaolink_host"
+                    android:scheme="@string/kakao_scheme" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
