커스텀 페이지 설정?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:label="ConstellationMenu" />
         <activity android:name=".RecommendationBoard">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <!--<action android:name="android.intent.action.VIEW" />-->
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -57,18 +57,7 @@
         <activity android:name=".CommuHomeActivity" />
         <activity android:name=".PostWritingActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".PostViewActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="@string/kakaolink_host"
-                    android:scheme="@string/kakao_scheme" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".PostViewActivity"/>
     </application>
 
 </manifest>
