--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
@@ -57,7 +57,16 @@
         <activity android:name=".CommuHomeActivity" />
         <activity android:name=".PostWritingActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".PostViewActivity"/>
+        <activity android:name=".PostViewActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="@string/kakaolink_host"
+                    android:scheme="@string/kakao_scheme" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
