--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainMenu">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,24 +44,21 @@
         <activity
             android:name=".ConstellationMenu"
             android:label="ConstellationMenu" />
-        <activity android:name=".RecommendationBoard">
-
-        </activity>
+        <activity android:name=".RecommendationBoard"/>
         <activity
             android:name=".RecommendationMenu"
             android:label="RecommendationMenu" />
-
-
         <activity android:name=".LoginActivity" />
         <activity android:name=".CommuHomeActivity" />
-        <activity android:name=".PostWritingActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".PostViewActivity">
-        </activity>
+        <activity
+            android:name=".PostWritingActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity android:name=".PostViewActivity"/>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
+
     </application>
 
 </manifest>
